Changelog for Miosix np embedded OS

- Started implementing FAT32 directory listing, still needs work.
- Implemented getcwd() and chdir() syscalls
- Added assertion check that openFileCount is always positive
- newFileOpened() is now called in FileBase constructor if parent is not null,
  so filesystems need not remember to do that
- Updated newlib patch to fix an use after free in closedir()
  This change requires recompiling GCC!
- Updated newlib patch for consistency with upstream change.
  Updated gcc patch for better buffer usage.
  This change requires recompiling GCC!
- Performance improved SD driver ported to all stm32 targets
- Updated newlib compiler patches to improve write performance also for
  fully buffered files. This change and the previous one require
  recompiling GCC
- Updated from GCC 4.7.2 to GCC 4.7.3, due to reported problems building
  the previous compiler versions.
- Added a new benchmark to test the filesystem backend (sector read/write).
  This is a separate benchmark and not in the testsuite.
- Updated newlib patches so as to avoid stdio code fragmenting large
  data blocks passed to fwrite() into smaller chunks if the file is
  unbuffered. This allows to increment filesystem write performance,
  especially FAT32 on SD cards. This change requires recompiling GCC!
- Improved disk.cpp for stm32f4, for improved write performance. This
  allows to fully utilize the multiple sector write, increasing write
  performance when writing large data blocks at a time.
- Started work on integrating Fat32 in the new file abstraction layer.
  Upgraded FatFs from 0.06 to 0.10. Added classes Fat32Fs and Fat32File
- Added an assertion in IntrusiveRefCountedSharedFromThis to help find
  bugs.
- File abstraction layer: FilesystemBase now publicly derives from
  IntrusiveRefCountedSharedFromThis to allow dynamic_casts
- File abstraction layer: added FilesystemBase::getFsId()
- File abstraction layer: added rmdir()